plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'net.drive'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'com.warrenstrange:googleauth:1.4.0'
	implementation 'com.google.zxing:core:3.5.2'
	implementation 'com.google.zxing:javase:3.4.1'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // JAXB
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.0'

	implementation 'org.springframework.boot:spring-boot-starter-aop'
   // implementation 'org.springframework.boot:spring-boot-starter-actuator'
    //implementation 'io.micrometer:micrometer-core'
    //implementation 'io.micrometer:micrometer-registry-prometheus'
}

/**
 * JaCoCo 
 */
jacoco {
	toolVersion = "0.8.11"
}

/**
 * 
 */
tasks.test {
	useJUnitPlatform()
	finalizedBy tasks.jacocoTestReport
}

/**
 * Coverage 
 */
tasks.jacocoTestReport {
	dependsOn tasks.test
	reports {
		html.required = true
		xml.required = true
		csv.required = false
	}
}
